k8s/overlays/dev/service-soport/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: service-soport
  labels:
    app.kubernetes.io/name: service-soport
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: service-soport
  template:
    metadata:
      labels:
        app.kubernetes.io/name: service-soport
    spec:
      serviceAccountName: service-soport-sa
      containers:
        - name: service-soport
          image: 345340320521.dkr.ecr.us-east-2.amazonaws.com/service-soport:e1f8d79c9e611712c38960444531e7c7e0b72df4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3

  strategy:
    canary:
      steps:
        - setWeight: 50
        - pause: {duration: 60s}
        - setWeight: 100
