k8s/overlays/dev/service-soport/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-soport
  labels:
    app.kubernetes.io/name: service-soport
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: service-soport
  ports:
    - name: http
      port: 80
      targetPort: http
