k8s/overlays/dev/service-soport/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-soport
  annotations:
    alb.ingress.kubernetes.io/group.name: travelhub-dev
    alb.ingress.kubernetes.io/group.order: "10"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:345340320521:certificate/fd746a85-fceb-421e-8c00-2320af7f5d96
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: app.travel-hub.tech
      http:
        paths:
          - path: /service-soport
            pathType: Prefix
            backend:
              service:
                name: service-soport
                port:
                  number: 80
